tests/fixtures/invalid/dict_div_list.py
# Cannot divide Dict[str, int] and List[int]
x: float = {"a": 1} / [1, 2, 3]
